--- a/app/src/main/res/layout/touch_screen_layout.xml
+++ b/app/src/main/res/layout/touch_screen_layout.xml
@@ -26,8 +26,8 @@
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="CheckBox"
-            app:layout_constraintBottom_toTopOf="@+id/checkBox3"
             app:layout_constraintEnd_toStartOf="@+id/checkBox2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +37,8 @@
             android:id="@+id/checkBox2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="CheckBox"
-            app:layout_constraintBottom_toTopOf="@+id/checkBox4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/checkBox"
@@ -49,22 +49,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/checkBox4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+            tools:layout_editor_absoluteY="314dp" />
 
         <CheckBox
             android:id="@+id/checkBox4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/checkBox3"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+            tools:layout_editor_absoluteY="314dp" />
     </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
