--- a/app/src/main/res/layout/touch_screen_layout.xml
+++ b/app/src/main/res/layout/touch_screen_layout.xml
@@ -27,20 +27,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
+            app:layout_constraintBottom_toTopOf="@+id/checkBox3"
             app:layout_constraintEnd_toStartOf="@+id/checkBox2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="141dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/checkBox2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CheckBox"
+            app:layout_constraintBottom_toTopOf="@+id/checkBox4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/checkBox"
-            tools:layout_editor_absoluteY="141dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/checkBox3"
@@ -48,8 +50,8 @@
             android:layout_height="wrap_content"
             android:text="CheckBox"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox"
-            tools:layout_editor_absoluteX="74dp" />
+            app:layout_constraintStart_toStartOf="@+id/checkBox"
+            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
         <CheckBox
             android:id="@+id/checkBox4"
@@ -57,8 +59,8 @@
             android:layout_height="wrap_content"
             android:text="CheckBox"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox2"
-            tools:layout_editor_absoluteX="242dp" />
+            app:layout_constraintStart_toStartOf="@+id/checkBox2"
+            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
     </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
